--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,14 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
 
-[*.js]
+[*.{js,css}]
 indent_style = space
 indent_size = 2
 
-[{package.json,*.yml,*.cjson}]
+[{package.json,*.yml,*.jsonc}]
 indent_style = space
 indent_size = 2
+
+[*.{html,handlebars}]
+indent_size = 4
+indent_style = tab
