--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "packageName",
+  "name": "@srmcguirt/be-mapped",
   "version": "0.0.0",
-  "description": "",
-  "repository": "unjs/packageName",
+  "description": "Javascript mapping utility functions.",
+  "repository": "srmcguirt/be-mapped",
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
@@ -22,21 +22,30 @@
   "scripts": {
     "build": "unbuild",
     "dev": "vitest dev",
-    "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs . && prettier -c src test",
-    "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs . --fix && prettier -c src test -w",
+    "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs .",
+    "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs .",
     "prepack": "pnpm run build",
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags",
     "test": "pnpm lint && vitest run --coverage"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.27.2",
+    "@antfu/eslint-config": "^0.34.1",
+    "@types/node": "^18.11.18",
+    "@vitest/coverage-c8": "^0.28.1",
     "changelogen": "^0.4.1",
-    "eslint": "^8.23.0",
-    "eslint-config-unjs": "^0.1.0",
-    "prettier": "^2.8.3",
-    "typescript": "^4.8.2",
+    "eslint": "^8.32.0",
+    "pnpm": "^7.25.1",
+    "typescript": "^4.9.4",
     "unbuild": "^1.1.1",
-    "vitest": "^0.27.2"
+    "vitest": "^0.28.1"
   },
-  "packageManager": "pnpm@7.25.1"
+  "packageManager": "pnpm@7.25.1",
+  "publishConfig": {
+    "access": "public"
+  },
+  "pnpm": {
+    "overrides": {
+      "debug": ">=3.1.0"
+    }
+  }
 }
