--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ types
 *.log*
 *.conf*
 *.env*
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
