fix: eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,12 +2,6 @@
   "extends": ["@antfu"],
   "rules": {
     "no-console": "off",
-    "brace-style": ["error", "1tbs"],
-    "semi": ["error", "always"],
-    "curly": ["error", "all"],
-    "operator-linebreak": ["error", "before"],
-    // "prefer-arrow-callback": "off",
-    "@typescript-eslint/brace-style": ["error", "1tbs"],
-    "@typescript-eslint/semi": ["error", "always"]
+    "operator-linebreak": ["error", "before"]
   }
 }
