--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@srmcguirt/be-mapped",
+  "name": "@srmcguirt/lambda",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@7.25.1",
-  "description": "Javascript mapping utility functions.",
+  "packageManager": "pnpm@7.26.1",
+  "description": "Simple and fast functional library.",
   "license": "MIT",
-  "repository": "srmcguirt/be-mapped",
+  "repository": "srmcguirt/lambda",
   "sideEffects": false,
   "exports": {
     ".": {
@@ -32,13 +32,13 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
     "@types/node": "^18.11.18",
-    "@vitest/coverage-c8": "^0.28.1",
+    "@vitest/coverage-c8": "^0.28.3",
     "changelogen": "^0.4.1",
     "eslint": "^8.32.0",
-    "pnpm": "^7.25.1",
+    "pnpm": "^7.26.1",
     "typescript": "^4.9.4",
     "unbuild": "^1.1.1",
-    "vitest": "^0.28.1"
+    "vitest": "^0.28.3"
   },
   "publishConfig": {
     "access": "public"
@@ -47,8 +47,5 @@
     "overrides": {
       "debug": ">=3.1.0"
     }
-  },
-  "dependencies": {
-    "defu": "^6.1.1"
   }
 }
